# seadronix

./: .gitattributes  DataGenerationScript.py  seastate_embeddings.json  valohai.yaml  weather_embeddings.json
ALSLib/: LICENSE  README.md  pyproject.toml
ALSLib/src/ALSLib/: ALSClient.py  ALSHelperDataCollection.py  ALSHelperDataCollection_old.py  ALSHelperFunctionLibrary.py  ALSHelperImageLibrary.py  ALSHelperLidarLibrary.py  ALSOverrideUtility.py  ALSPointCloudVisualisation.py  ALSRadarVis.py  ALSRadarVisSliderStyle  ALSRadarVisualisationConfig.json  ALSReceiver.cp310-win_amd64.pyd  ALSReceiver.cp311-win_amd64.pyd  ALSReceiver.cp312-win_amd64.pyd  ALSReceiver.pyi  ALSSensor.py  ALSSensorDistributionInfo.py  ALSSensorGroup.py  ALSTestManager.py  ALSTestManager_bck.py  ALS_TestDefinitionGenerator.cp310-win_amd64.pyd  ALS_TestDefinitionGenerator.cp311-win_amd64_dst.pyd  ALS_TestDefinitionGenerator.cp312-win_amd64.pyd  TCPClient.py  UDPClient.py
python/: merge_matching.py  train.py
python/data_processing/: README.md  ails_draw_bbox.py  ails_list_classes.py
python/data_processing/JSON2YOLO/: utils.py
repository_content/python/: test.py  validate.py  valohai_watch.py
repository_content/python/configs/: ails_yolo.yaml  singapore_maritime_yolo.yaml  yolo_dataset_valohai.yaml
repository_content/python/data_processing/: ails_to_coco_format.py  merge_coco_datasets.py  singapore_maritime_to_coco_format.py  split_coco.py
repository_content/python/data_processing/JSON2YOLO/: general_json2yolo.py  labelbox_json2yolo.py
